# neatplan

./: .gitignore  CHANGELOG  README.md  crossplane_patch.sh  deploy.sh  neatplan  neatplan.py  neatplan.sh  pyproject.toml  requirements.txt  tentatives.sh
etc/init.d/: neatplan
etc/neatplan/: default.conf
etc/sv/neatplan/: run
etc/systemd/system/: neatplan.service
neatplan/: __init__.py  __main__.py  neatplan.py
src/: neatplan.py
test/: Dockerfile-python3.6
