[project]
name = "neatplan"
version = "0.0.2"
authors = [
  { name="c0m4r", email="github@wolfet.pl" },
]
description = "nginx-style network configuration"
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "psutil>=5.9.8",
  "crossplane>=0.5.8",
]

[project.scripts]
neatplan = "neatplan:main"

[project.urls]
Homepage = "https://github.com/c0m4r/neatplan"
Issues = "https://github.com/c0m4r/neatplan/issues"
